<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
 <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:paddingBottom="24dp">
  <TextView style="@style/ScreenTitle" android:text="@string/settings" />
  <TextView style="@style/PanelText" android:text="@string/local_account" />
  <TextView style="@style/PanelText" android:text="@string/local_account_detail" />
  <Button android:id="@+id/settingsSearch" style="@style/WideButton" android:text="@string/search_everything" />
  <Button android:id="@+id/help" style="@style/WideButton" android:text="@string/help" />
  <TextView style="@style/PanelText" android:text="@string/app_settings" android:textStyle="bold" />
  <Button android:id="@+id/themeChoice" style="@style/WideButton" android:text="@string/theme_choice" />
  <Button android:id="@+id/manageLists" style="@style/WideButton" android:text="@string/manage_lists" />
  <Button android:id="@+id/settingsTimer" style="@style/WideButton" android:text="@string/timer" />
  <Button android:id="@+id/settingsReport" style="@style/WideButton" android:text="@string/habit_report" />
  <TextView style="@style/PanelText" android:text="@string/future_services" />
 </LinearLayout>
</ScrollView>