<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="20dp">
        <EditText android:id="@+id/entryTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="48dp" android:hint="@string/entry_title" android:inputType="textCapSentences" android:maxLength="200" />
        <EditText android:id="@+id/entryBody" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="96dp" android:hint="@string/entry_body" android:inputType="textMultiLine|textCapSentences" android:gravity="top" android:maxLength="10000" />
        <EditText android:id="@+id/entryLabel" android:layout_width="match_parent" android:layout_height="48dp" android:hint="@string/note_label" android:inputType="textCapSentences" android:singleLine="true" android:maxLength="40" />
        <Button android:id="@+id/entryDate" style="@style/WideButton" />
        <Button android:id="@+id/entryTime" style="@style/WideButton" />
    </LinearLayout>
</ScrollView>