<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="72dp" android:background="@color/workspace_surface"><FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
<ImageButton android:id="@+id/navTasks" style="@style/IconButton" app:srcCompat="@drawable/ic_tasks" android:contentDescription="@string/nav_tasks" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="23dp" />
<View android:id="@+id/navTasksIndicator" android:layout_width="28dp" android:layout_height="3dp" android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="9dp" android:background="@drawable/nav_underline" android:visibility="invisible" android:importantForAccessibility="no" />
</FrameLayout><FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
<ImageButton android:id="@+id/navJournal" style="@style/IconButton" app:srcCompat="@drawable/ic_journal" android:contentDescription="@string/nav_journal" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="23dp" />
<View android:id="@+id/navJournalIndicator" android:layout_width="28dp" android:layout_height="3dp" android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="9dp" android:background="@drawable/nav_underline" android:visibility="invisible" android:importantForAccessibility="no" />
</FrameLayout><FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
<ImageButton android:id="@+id/navCalendar" style="@style/IconButton" app:srcCompat="@drawable/ic_calendar" android:contentDescription="@string/nav_calendar" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="23dp" />
<View android:id="@+id/navCalendarIndicator" android:layout_width="28dp" android:layout_height="3dp" android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="9dp" android:background="@drawable/nav_underline" android:visibility="invisible" android:importantForAccessibility="no" />
</FrameLayout><FrameLayout android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="1">
<ImageButton android:id="@+id/navSettings" style="@style/IconButton" app:srcCompat="@drawable/ic_settings" android:contentDescription="@string/nav_settings" android:layout_width="match_parent" android:layout_height="match_parent" android:padding="23dp" />
<View android:id="@+id/navSettingsIndicator" android:layout_width="28dp" android:layout_height="3dp" android:layout_gravity="bottom|center_horizontal" android:layout_marginBottom="9dp" android:background="@drawable/nav_underline" android:visibility="invisible" android:importantForAccessibility="no" />
</FrameLayout></LinearLayout>